export interface MedicalRecord {
    id: string;
    medicalRecordNumber: string;
    medicalConditions: string[];
    allergies: string[];
    description: string;
}
